2002-10-06 17:17  huysmans

	* configure, configure.ac, panel/handle.c,
	plugins/clock/Makefile.am, plugins/clock/Makefile.in,
	plugins/clock/clock.c, plugins/clock/xfce_clock.c,
	plugins/clock/xfce_clock.h: Use new libxfcegui4

2002-10-05 23:53  huysmans

	* configure, configure.ac, panel/builtins.c, panel/controls.c,
	panel/global.h, plugins/Makefile.am, plugins/Makefile.in,
	plugins/trash/Makefile.am, plugins/trash/Makefile.in,
	plugins/trash/trash.c: Make trash can a plugin

2002-10-05 23:01  huysmans

	* ChangeLog, panel/builtins.c, panel/global.h: A few fixes for bugs
	created with the clock plugin move

2002-10-05 22:49  huysmans

	* configure, configure.ac, panel/Makefile.am, panel/Makefile.in,
	panel/builtins.c, panel/controls.c, panel/xfce_clock.c,
	panel/xfce_clock.h, plugins/Makefile.am, plugins/Makefile.in,
	plugins/clock/Makefile.am, plugins/clock/Makefile.in,
	plugins/clock/clock.c, plugins/clock/xfce_clock.c,
	plugins/clock/xfce_clock.h: Make the clock a plugin

2002-10-05 10:37  huysmans

	* ChangeLog, panel/handle.c, panel/handle.h, panel/xfce.c: update
	handle layout

2002-10-03 19:24  huysmans

	* panel/: builtins.c, xfce.c: Fix current desktop bug

2002-10-02 08:49  huysmans

	* panel/: handle.c, xfce.c: Re-add frame to move handles, remove
	separators. Looks a bit better I think

2002-10-02 00:25  huysmans

	* Makefile.am, Makefile.in, panel/Makefile.am, panel/Makefile.in,
	panel/handle.c, panel/handle.h, panel/move.c, panel/move.h,
	panel/popup.c, panel/side.c, panel/xfce.c: Initial layout change:
	handles on the sides

2002-09-30 10:33  xfce

	* panel/xfce_clock.c: Change length of hour needle to improve
	readability, especially in small size.

2002-09-29 23:22  huysmans

	* configure, configure.ac, themes/Makefile.am, themes/Makefile.in,
	themes/Curve/Makefile.am, themes/Curve/Makefile.in,
	themes/Curve/README, themes/Curve/edit.png, themes/Curve/file1.png,
	themes/Curve/file2.png, themes/Curve/games.png,