@@ -1,3 +1,7 @@
+2002-10-06 23:32  huysmans
+
+	* ChangeLog, panel/handle.c: Fix position saving
+
 2002-10-06 17:17  huysmans
 
 	* configure, configure.ac, panel/handle.c,
